# python-projects

./: Python_Tutorials_for_Fiifi.ipynb  README.md
todo-app/: README.md  pyproject.toml  requirements.txt  setup.cfg
todo-app/docs/: app.js  index.html  style.css
todo-app/src/tests/: test_todo.py
todo-app/src/todo_app/: __main__.py  api.py  cli.py  models.py  services.py  storage.py
