[metadata]
name = todo-app
version = 0.1.0
description = A simple To-Do application
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/yourusername/todo-app

[options]
packages = find:
install_requires =
    click
    flask
    sqlalchemy

[options.packages.find]
where = src

[tool:pytest]
testpaths = src/tests

[coverage:run]
branch = True
source = src/todo_app

[coverage:report]
show_missing = True
skip_covered = True